tools/sonarqube/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    app.kubernetes.io/part-of: acme-platform
    app.kubernetes.io/component: sonarqube
